Creado mediante Colaboratory

--- a/EntregaFinal1.ipynb
+++ b/EntregaFinal1.ipynb
@@ -75,7 +75,7 @@
       "source": [
         "!pip install joblib\n"
       ],
-      "execution_count": 643,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -129,7 +129,7 @@
         "from sklearn.pipeline import Pipeline\r\n",
         "from sklearn.datasets import fetch_lfw_people\r\n"
       ],
-      "execution_count": 644,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -180,7 +180,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 645,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -229,7 +229,7 @@
         "plt.imshow(lfw_people.images[1287,:,:],cmap='gray')\n",
         "#print(lfw_people.images[1287,:,:])"
       ],
-      "execution_count": 646,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -275,7 +275,7 @@
         "print('Dimensiones tipo pandas: ',Xdata.shape)\n",
         "plt.imshow(np.array(Xdata.iloc[0,:]).reshape(lfw_people.images.shape[1],lfw_people.images.shape[2]),cmap='gray')\n"
       ],
-      "execution_count": 647,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -345,7 +345,7 @@
         "Xtrain, Xtest, ytrain,ytest = train_test_split(Xdata,y,test_size=0.3) \n",
         "Xtrain.head()"
       ],
-      "execution_count": 648,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -897,16 +897,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "jCIG2AVKeUS3"
-      },
-      "source": [
-        "# A continuacion: \r\n",
-        "*Importamos la libreria tensor flor, normalizamos las imagenes a 255 pixeles  que corresponde a Xtrain y ytrain, y los convertimos a flotante de 32  de forma manual, ya que tensor flow solo trabaja con flotantes de 32.*"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "bFf9XIw8eI5c"
@@ -917,43 +907,7 @@
         "import matplotlib.pyplot as plt \n",
         "import numpy as np"
       ],
-      "execution_count": 649,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "cO_rurPZVZFl"
-      },
-      "source": [
-        "#lfw_people.images.shape"
-      ],
-      "execution_count": 650,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "iWz6nYVpc_Ju"
-      },
-      "source": [
-        "\n",
-        "#Xtrain = Xtrain/255\n",
-        "#Xtest = Xtest/255\n"
-      ],
-      "execution_count": 651,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "nbnwP6CEdUo0"
-      },
-      "source": [
-        "#Xtrain_ = tf.convert_to_tensor(Xtrain,dtype=tf.float32)\n",
-        "#ytrain_ = tf.convert_to_tensor(Xtrain,dtype=tf.float32)"
-      ],
-      "execution_count": 652,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1039,7 +993,7 @@
         "print(y_train.shape,y_test.shape)\n",
         "print(X_valid.shape)"
       ],
-      "execution_count": 653,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1069,7 +1023,7 @@
         "id": "xxOTLS9ci0Fl"
       },
       "source": [
-        "# no me convense, revisar ser mas objetivo mk*Definimos el modelo, con cada una de sus caracteristicas, para que sea el más indicado, también definimos las densas y el regularizador que permitira que las neuronas se apaguen aleatoriamente.\r\n",
+        "*Definimos el modelo, con cada una de sus caracteristicas, para que sea el más indicado, también definimos las densas y el regularizador que permitira que las neuronas se apaguen aleatoriamente.\r\n",
         "Esto con el fin de obtener el mejor rendimiento de la red neuronal.* "
       ]
     },
@@ -1112,7 +1066,7 @@
         "    keras.layers.Dense(units=7, activation='softmax'),\n",
         "])"
       ],
-      "execution_count": 654,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1137,7 +1091,7 @@
       "source": [
         "model.summary()"
       ],
-      "execution_count": 655,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1210,11 +1164,16 @@
         "id": "QB6-_hlUmOB8"
       },
       "source": [
+        "#Descenso estocástico del gradiente – SGD (Stochastic Gradient Descent)\r\n",
+        "\r\n",
+        "El descenso estocástico o gradiente de descenso incremental, es una aproximación estocástica del gradiente descendiente usado para minimizar una función objetivo que se escribe como una suma de funciones diferenciables. Este optimizador trata de encontrar mínimos o máximos por iteración.\r\n",
+        "Al igual que en la función del gradiente descendente, el gradiente indica la dirección en la que la función tiene el ratio de aumento más pronunciada aunque no indica hasta donde se debe avanzar en esa dirección.\r\n",
+        "Como este optimizador no nos fija cuanto avanzar, existe el ratio de aprendizaje que no determina la distancia que recorrerá en cada iteración en la dirección que del gradiente.\r\n",
         "\r\n",
         "#Compilamos y entrenamos el modelo\r\n",
         "\r\n",
-        "*Compilamos el modelo,  utilizando un optimizador SGD y el parametro learning rate de \"1e-2\" y procedemos a entrenar con epoch de 150 que indica la cantidad de veces que los datos recorreran el modelo, y procedemos a entrenarlo.* \r\n",
-        "\r\n"
+        "* Entrenamos la red utilizanod un optimizador SGD, porque se genera un mejor modelo y no se sobreajusta  la red convolucional. Tambien utilizamos un epoch de 50 que indica la cantidad de veces que los datos recorreran el modelo, y procedemos a entrenarlo.\r\n",
+        "como se ve a continuacion:\r\n"
       ]
     },
     {
@@ -1233,7 +1192,7 @@
         "from keras.preprocessing.image import ImageDataGenerator\r\n",
         "from keras.callbacks import ReduceLROnPlateau"
       ],
-      "execution_count": 656,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1269,7 +1228,7 @@
         " \n",
         "history = model.fit(X_train, y_train, epochs=50, validation_data=(X_valid, y_valid))"
       ],
-      "execution_count": 657,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1405,7 +1364,7 @@
         "plt.grid(True)\n",
         "plt.show()"
       ],
-      "execution_count": 658,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1447,7 +1406,7 @@
         "y_pred = model.predict_classes(X_new)\n",
         "print(y_pred,y_test[:2])"
       ],
-      "execution_count": 659,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1466,7 +1425,7 @@
         "id": "udypwN_vu-5v"
       },
       "source": [
-        "Podmeos observar que al aplicar el aprendizaje profundo CNN ha logrado una precision de prueba de mas del 85%."
+        "Podmeos observar que al aplicar el aprendizaje profundo CNN ha logrado una precision de prueba de mas del 90%."
       ]
     },
     {
@@ -1570,7 +1529,7 @@
         "    fig.tight_layout()\r\n",
         "    return ax\r\n"
       ],
-      "execution_count": 660,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1600,7 +1559,7 @@
         "plt.title('Multiclase')\r\n",
         "print(classification_report(y_test, y_test_e.argmax(axis=1)),lfw_people.target_names)"
       ],
-      "execution_count": 661,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1658,6 +1617,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xk7MK2aVoUCg"
+      },
+      "source": [
+        "ahora para mejorar el modelo, se busca ajustarlo añadiendo mas capas buscando por nombre para tener mas informacion "
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -1672,7 +1640,7 @@
         "model_B = tf.keras.Model(inputs=model.inputs,outputs=model.layers[1].output) #se accede a capas por nombre\n",
         "tf.keras.utils.plot_model(model_B) "
       ],
-      "execution_count": 662,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1702,7 +1670,7 @@
         "z = model_B.predict(X_test)\n",
         "z.shape"
       ],
-      "execution_count": 663,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1748,7 +1716,7 @@
         "#save_fig('fashion_mnist_plot', tight_layout=False)\n",
         "plt.show()"
       ],
-      "execution_count": 664,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1791,7 +1759,7 @@
         "print(model.layers[0].get_weights()[0].shape)\n",
         "print(model.layers[0].get_weights()[1].shape)"
       ],
-      "execution_count": 665,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1829,7 +1797,7 @@
         "#save_fig('fashion_mnist_plot', tight_layout=False)\n",
         "plt.show()"
       ],
-      "execution_count": 666,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1917,7 +1885,7 @@
         "print('Mejores modelos:\\n')\r\n",
         "best_model"
       ],
-      "execution_count": 667,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2053,7 +2021,7 @@
         "    print(cr)\r\n",
         "\r\n"
       ],
-      "execution_count": 668,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2129,6 +2097,16 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "JIaJF2gpqa3t"
+      },
+      "source": [
+        "Gracias al analisis que se le realizo con las matrices de confusion, podemos ver la probabilidada del modelo que predice los rostros de los presidentes, para una precision del 81,1% podemos ver que George W Bush fue el presidente que mejor predijo con un 92,7% de exactitud,  mientras que para Donald Rumsfeld fue al que peor predijo con un 56,7% de exactitud, esto se puede explicar dadas las calidades de imagenes que tienen la base de datos y tambien la cantidad de la misma que se estan aplicando en el preentreno.\r\n",
+        "se puede ver que al reducir la exactitud del modelo cambia la precision con la que puede predecir los rostros de los presidentes, "
       ]
     },
     {
@@ -2218,7 +2196,7 @@
         "    roc_auc, fpr, tpr, n_classes = roc_multiclass(ytest_b,ytest_score)\r\n",
         "    roc_auc_mc(roc_auc,fpr,tpr,n_classes,'ROC curve ' + label_models[i],path_img)\r\n"
       ],
-      "execution_count": 669,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2269,9 +2247,9 @@
       },
       "source": [
         "# Conclusión: \r\n",
-        "Una base de datos ya estabelecida se utilizo para la clasificacion de Rostros de personas, la cual se uso para el entrenamiento mediante CNN, se obtuvo un resultado prometedor pues apartir de este resultaso el modelo obtenido lo podemos clasificar como optimo,     observamos que al aplicar el aprendizaje profundo CNN ha logrado una precision de prueba de mas del 85%.\r\n",
+        "Una base de datos ya estabelecida se utilizo para la clasificacion de Rostros de personas, la cual se uso para el entrenamiento mediante CNN, se obtuvo un resultado prometedor pues apartir de este resultaso el modelo obtenido lo podemos clasificar como optimo, observamos que al aplicar el aprendizaje profundo CNN ha logrado una precision de prueba de mas del 90%.\r\n",
         "\r\n",
-        "Tambien se han aplicado soluciones para evitar el sobreajuste como el dropout, al igual que varios metodos que facilitan la otimizacion de los coeficientes para llegara a la convergencia de la funcion de coste como la prueba de diferentes funciones optimizadoras y un learning rate dimanico si se encontraba un punto de silla.\r\n",
+        "Tambien se han aplicado soluciones para evitar el sobreajuste como el dropout y , al igual que varios metodos que facilitan la otimizacion de los coeficientes para llegara a la convergencia de la funcion de coste como la prueba de diferentes funciones optimizadoras.\r\n",
         "\r\n",
         "\r\n",
         "\r\n",
