Creado mediante Colaboratory

--- a/EntregaFinal1.ipynb
+++ b/EntregaFinal1.ipynb
@@ -2105,8 +2105,8 @@
         "id": "JIaJF2gpqa3t"
       },
       "source": [
-        "Gracias al analisis que se le realizo con las matrices de confusion, podemos ver la probabilidada del modelo que predice los rostros de los presidentes, para una precision del 81,1% podemos ver que George W Bush fue el presidente que mejor predijo con un 92,7% de exactitud,  mientras que para Donald Rumsfeld fue al que peor predijo con un 56,7% de exactitud, esto se puede explicar dadas las calidades de imagenes que tienen la base de datos y tambien la cantidad de la misma que se estan aplicando en el preentreno.\r\n",
-        "se puede ver que al reducir la exactitud del modelo cambia la precision con la que puede predecir los rostros de los presidentes, "
+        "Gracias al analisis que se le realizo con las matrices de confusion, podemos ver la probabilidada del modelo que predice los rostros de los presidentes, para una precision (ACC) del 81,1% podemos ver que George W Bush fue el presidente que mejor predijo con un 92,7% de exactitud,  mientras que para Donald Rumsfeld fue al que peor predijo con un 56,7% de exactitud, esto se puede explicar dadas las calidades de imagenes que tienen la base de datos y tambien la cantidad de la misma que se estan aplicando en el preentreno.\r\n",
+        "se puede ver que al reducir la exactitud del modelo cambia la precision con la que puede predice los rostros de los presidentes, se puede ver que teniendo una precision (ACC) del 73,1%, predijo a George W Bush con un 97,6% de exactitud, y ahora ya no es  Donald Rumsfeld el de peor prediccion si no que ahora es Gerhard Schroeder el cual tienen un 28,9% de exactitud, llegando a confundirlo con George W Bush en un 42,1% de las veces."
       ]
     },
     {
