Creado mediante Colaboratory

--- a/EntregaFinal1.ipynb
+++ b/EntregaFinal1.ipynb
@@ -129,7 +129,7 @@
         "from sklearn.pipeline import Pipeline\r\n",
         "from sklearn.datasets import fetch_lfw_people\r\n"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -160,10 +160,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 471
+          "height": 558
         },
         "id": "BR6wFAw_YoW0",
-        "outputId": "bec2f1bb-062d-407e-c2e4-d94019d5c8b4"
+        "outputId": "676f2463-ac48-42a2-bd88-516cfee63b4e"
       },
       "source": [
         "%matplotlib inline\n",
@@ -180,8 +180,18 @@
         "\n",
         "\n"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Downloading LFW metadata: https://ndownloader.figshare.com/files/5976012\n",
+            "Downloading LFW metadata: https://ndownloader.figshare.com/files/5976009\n",
+            "Downloading LFW metadata: https://ndownloader.figshare.com/files/5976006\n",
+            "Downloading LFW data (~200MB): https://ndownloader.figshare.com/files/5976015\n"
+          ],
+          "name": "stderr"
+        },
         {
           "output_type": "stream",
           "text": [
@@ -220,28 +230,28 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 284
+          "height": 285
         },
         "id": "xYy6pPm12Jfc",
-        "outputId": "c7e1c1c2-619e-467b-ea37-5279c48102d7"
+        "outputId": "a0ad7ddf-e4ee-4dca-fa12-c094b67dd650"
       },
       "source": [
         "plt.imshow(lfw_people.images[1287,:,:],cmap='gray')\n",
         "#print(lfw_people.images[1287,:,:])"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7fd2275a3240>"
+              "<matplotlib.image.AxesImage at 0x7f1d747286d8>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 646
+          "execution_count": 5
         },
         {
           "output_type": "display_data",
@@ -263,19 +273,21 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 301
+          "height": 304
         },
         "id": "BEH-EPjqYoW3",
-        "outputId": "26a4c653-94d0-4829-ce66-a9010c756b0c"
+        "outputId": "414e51f6-8f19-4a33-9c9a-ee1b204d3967"
       },
       "source": [
         "# datos tipo pandas\n",
         "Xdata = pd.DataFrame(lfw_people.data)/255\n",
         "y = lfw_people.target\n",
         "print('Dimensiones tipo pandas: ',Xdata.shape)\n",
-        "plt.imshow(np.array(Xdata.iloc[0,:]).reshape(lfw_people.images.shape[1],lfw_people.images.shape[2]),cmap='gray')\n"
+        "plt.imshow(np.array(Xdata.iloc[0,:]).reshape(lfw_people.images.shape[1],lfw_people.images.shape[2]),cmap='gray')\n",
+        "\n",
+        "\n"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -288,13 +300,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7fd227576748>"
+              "<matplotlib.image.AxesImage at 0x7f1d73f62908>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 647
+          "execution_count": 11
         },
         {
           "output_type": "display_data",
@@ -308,6 +320,29 @@
             "tags": [],
             "needs_background": "light"
           }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cbfcHnZ63jES",
+        "outputId": "1b5248eb-fcbc-4130-e648-b4ff80d11c3c"
+      },
+      "source": [
+        "print(y)"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[5 6 3 ... 5 3 5]\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -935,8 +970,8 @@
       },
       "source": [
         "Las arquitecturas típicas de CNN apilan algunas capas convolucionales\n",
-        "(seguida de una capa ReLU), luego una capa de pooling, luego otras pocas\n",
-        "capas convolucionales (+ ReLU), luego otra capa de pooling, y así\n",
+        "(seguida de una capa SeLU), luego una capa de pooling, luego otras pocas\n",
+        "capas convolucionales (+ SeLU), luego otra capa de pooling, y así\n",
         "sucesivamente."
       ]
     },
