Creado mediante Colaboratory

--- a/EntregaFinal1.ipynb
+++ b/EntregaFinal1.ipynb
@@ -129,7 +129,7 @@
         "from sklearn.pipeline import Pipeline\r\n",
         "from sklearn.datasets import fetch_lfw_people\r\n"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -180,7 +180,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -239,7 +239,7 @@
         "plt.imshow(lfw_people.images[1287,:,:],cmap='gray')\n",
         "#print(lfw_people.images[1287,:,:])"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -287,7 +287,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -335,7 +335,7 @@
       "source": [
         "print(y)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2284,7 +2284,12 @@
         "# Conclusión: \r\n",
         "Una base de datos ya estabelecida se utilizo para la clasificacion de Rostros de personas, la cual se uso para el entrenamiento mediante CNN, se obtuvo un resultado prometedor pues apartir de este resultaso el modelo obtenido lo podemos clasificar como optimo, observamos que al aplicar el aprendizaje profundo CNN ha logrado una precision de prueba de mas del 90%.\r\n",
         "\r\n",
-        "Tambien se han aplicado soluciones para evitar el sobreajuste como el dropout y , al igual que varios metodos que facilitan la otimizacion de los coeficientes para llegara a la convergencia de la funcion de coste como la prueba de diferentes funciones optimizadoras.\r\n",
+        "Tambien se han aplicado soluciones para evitar el sobreajuste como el dropout, al igual que varios metodos que facilitan la otimizacion de los coeficientes para llegara a la convergencia de la funcion de coste como la prueba de diferentes funciones optimizadoras.\r\n",
+        "\r\n",
+        "Las curvas ROC son una representación gráfica de la sensibilidad frente a la especificidad para un sistema clasificador  según se varía el umbral de discriminación. Este análisis nos  proporciona herramientas para seleccionar los modelos posiblemente óptimos y descartar modelos subóptimos independientemente de (y antes de especificar) el coste de la distribución de las clases sobre las que se decide.\r\n",
+        "En nuestro caso, obtuvimos muy buenos resultados en ambos clasificadores multiclases, todas las líneas en el rango de verdadero positivo, y en el modelo 1 la clase que tuvo el mejor punto de corte fue la clase 5 de café con un 0.99 y en el modelo dos también la clase 5 de color café con un valor de 0.97 cuando el mejor punto de corte corresponde a 1.\r\n",
+        "\r\n",
+        "\r\n",
         "\r\n",
         "\r\n",
         "\r\n",
